# ChangeLog for dev-perl/CPAN-Checksums
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Checksums/ChangeLog,v 1.24 2009/07/19 17:34:19 tove Exp $

  19 Jul 2009; Torsten Veller <tove@gentoo.org> CPAN-Checksums-1.050.ebuild,
  CPAN-Checksums-2.02.ebuild:
  IO-Compress replaces Compress-Zlib

  02 May 2009; Torsten Veller <tove@gentoo.org> -CPAN-Checksums-2.01.ebuild:
  Cleanup

  18 Nov 2008; Torsten Veller <tove@gentoo.org> CPAN-Checksums-1.050.ebuild,
  CPAN-Checksums-2.01.ebuild, CPAN-Checksums-2.02.ebuild:
  New virtuals: Compress-Zlib Digest-SHA

*CPAN-Checksums-2.02 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org> +CPAN-Checksums-2.02.ebuild:
  Version bump

  30 Sep 2008; Torsten Veller <tove@gentoo.org>
  -CPAN-Checksums-1.039.ebuild, -CPAN-Checksums-2.00.ebuild:
  Cleanup

*CPAN-Checksums-2.01 (05 Sep 2008)

  05 Sep 2008; Torsten Veller <tove@gentoo.org> +CPAN-Checksums-2.01.ebuild:
  Version bump

*CPAN-Checksums-2.00 (02 Aug 2008)

  02 Aug 2008; Torsten Veller <tove@gentoo.org> +CPAN-Checksums-2.00.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> CPAN-Checksums-1.050.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  CPAN-Checksums-1.050.ebuild:
  Stable on IA64.

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Checksums-1.050.ebuild:
  Marking amd64 stable

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Checksums-1.039.ebuild, CPAN-Checksums-1.050.ebuild:
  Ebuild maintenance

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Checksums-1.050.ebuild:
  Marking sparc stable; keywording ~amd64

  10 Dec 2006; Yuval Yaari <yuval@gentoo.org> CPAN-Checksums-1.050.ebuild:
  Changed dependency on perl-core/File-Temp to virtual/perl-File-Temp (bug
  #157673)

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  CPAN-Checksums-1.039.ebuild:
  Stable on ia64.
