@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/CPAN-Checksums
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Checksums/ChangeLog,v 1.24 2009/07/19 17:34:19 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Checksums/ChangeLog,v 1.25 2009/09/24 06:27:26 tove Exp $
+
+*CPAN-Checksums-2.03 (24 Sep 2009)
+
+  24 Sep 2009; Torsten Veller <tove@gentoo.org> +CPAN-Checksums-2.03.ebuild:
+  Version bump
 
   19 Jul 2009; Torsten Veller <tove@gentoo.org> CPAN-Checksums-1.050.ebuild,
   CPAN-Checksums-2.02.ebuild:
